# srl_robosuite

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
projects/custom_objs/: __init__.py  custom_arenas.py  custom_objs.py
projects/data/: __init__.py  contact_logger.py  log_data_reader.py
projects/dual_kinova3_teleop/: __init__.py  demo_dual_kinova3_device_control.py  demo_dual_kinova3_hardware_keyboard_teleop.py  demo_dual_kinova3_mediapipe_teleop.py  jetson_communication_xr_robot_teleop_hardware.py  robot_stream_viewer.html  test_streaming.py
projects/dual_kinova3_teleop/controllers/: __init__.py  mink_controller.py
projects/experiment_envs/: __init__.py  bounce.py  dualkinova3_srl_env.py  exp_bikino_xr.py  exp_bikino_xr_streaming.py  exp_cabinet.py  exp_dual_kinova3_oscmink_keyboard.py  exp_dual_kinova3_oscmink_mediapipe.py  exp_glass_gap.py  exp_narrow_gap.py  exp_pick_place.py  exp_two_arm_lift.py  playback_narrow_gap.py
projects/psyonic_hand_teleop/: __init__.py  demo_dual_kinova3_psyonic_mediapipe_teleop.py  demo_dual_kinova3_psyonic_xr_offline.py  demo_dual_kinova3_psyonic_xr_teleop.py  demo_dual_kinova3_psyonic_xr_teleop_hardware.py
projects/shared_devices/: mediapipe_teleop_device.py  mediapipe_teleop_robosuite_wrapper.py  mink_keyboard_device.py  mink_xr_robot_teleop_client.py  offline_openxr_pose_reader.py  xr_media_mtx_streamer.py  xr_robot_teleop_client.py  zed_to_mediamtx.sh
projects/shared_scripts/: mujoco_camera_utils.py  mujoco_video_source.py  mujoco_window_utils.py  profiler_utils.py
(+33 files in other folders)
